data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1279.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\90\80\80\80\00\01\07"
    "\6d\6f\64\75\6c\65\42\04\66\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\01\0a\91\80\80\80\00\01\8b\80\80"
    "\80\00\00\02\7f\41\2a\0c\00\10\00\0b\0b"
  )
""
)